--- a/cms/css/styleUsuario.css
+++ b/cms/css/styleUsuario.css
@@ -8,12 +8,12 @@ h1{
 }
 /*AREA usuario_view*/
 .suporte_titulo{
-  width: 1000px;
+  width: 100%;
   height: 800px;
   /*background: green;*/
 }
 .titulo_usuario{
-  width:1000px;
+  width:100%;
   height: 50px;
   margin: auto;
   background-color: pink;
@@ -29,16 +29,10 @@ h1{
 }
 /**/
 #conteudo_usuario{
-  width: 1000px;
+  width: 100%;
   height: 50px;
   background-color: #636568;
   /*margin-top: -175px;*/
-}
-#conteudo_usuario_detalhes{
-  width: 1000px;
-  height: 50px;
-  background-color: #636568;
-  margin-top: -175px;
 }
 
 .dados_user{
@@ -99,14 +93,14 @@ h1{
   margin: auto;
 }
 
+/*Tela que traz as informações*/
 .conteudo_usuario_info{
-  width: 1200px;
-  min-height:50px;
+  width: 100%;
+  min-height:70px;
   height: auto;
   overflow: hidden;
   background-color: red;
   margin-top: 50px;
-
 }
 
 .modo_user{
@@ -118,10 +112,15 @@ h1{
 }
 
 /*Area de modal*/
+.suporte{
+  width: 100%;
+  height: auto;
+  /*background-color: blue;*/
+}
 .modalUsuario2{
 	width:700px;
 	height:600px;
-	background-color:magenta;
+	/*background-color:magenta;
 	 /*margin:auto;*/
   margin-top: 180px;
   margin-left: auto;
@@ -140,7 +139,7 @@ h1{
 	display:none;
   z-index: 999;
 }
-#conteudo_informacoes{
+/*#conteudo_informacoes{
   width: 1000px;
   height: 10px;
   background-color: #636568;
@@ -148,13 +147,19 @@ h1{
   font-size: 20px;
   top: -50px;
 
-}
+}*/
 /**/
+#conteudo_usuario_detalhes{
+  width: 100%;
+  height: 50px;
+  background-color: magenta;
+  margin-top: -40px;
+}
 .conteudo_informacoes{
   width: 300px;
    height: auto;
    background-color: yellow;
-   margin-left: 175px;
+   margin-left: 50px;
    margin-top: 15px;
    float: left;
 
