--- a/cms/css/style_carbook.css
+++ b/cms/css/style_carbook.css
@@ -5,21 +5,21 @@
   background-color: red;
 }
 
-.suporte_video{
+/* .suporte_video{
   width: 500px;
   height: 300px;
   background-color: blue;
   margin: auto;
   margin-top: 5px;
 
-}
+} */
 
 .cadastro_carbook{
   width: 750px;
-  height: 650px;
+  height: 620px;
   float: left;
-  margin-left: 10px;
-  background-color: green;
+  margin-left: 5px;
+  /*background-color: green;*/
 }
 
 /* #btn_editar{
@@ -30,18 +30,36 @@ margin-left: 780px;
 margin-top: 250px;
 } */
 
-.area_texto{
-  width:680px;
-  height: 200px;
+
+.control_small{
+  width:600px;
+  height: 70px;
   background-color: yellow;
   margin: auto;
   margin-top: 10px;
 }
 
-/* #btn_salvar{
+
+
+/*.imgCarbook{
+  width: 50%;
+  height: 85%;
+  margin-top: 2%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: red;
+}
+
+.imgCarbook img{
+  width: 100%;
+  height: 100%;
+
+}*/
+
+.btn_salvar{
 width: 63px;
 height: 63px;
 /*background-color: magenta;
 margin-left: 695px;
-margin-top: 100px;
-} */
+margin-top: 100px;*/
+}
